# JEF-Chrome-Extension

./: .gitignore  CHANGELOG.md  LICENSE  README.md  background.js  com.odin.jef_tester.json  hp_fetch_file.py  jef_native_host.py  manifest.json  popup.css  popup.html  popup.js  pyproject.toml
.github/workflows/: api-docs.yaml  publish.yml  test.yaml
docs/source/: conf.py
docs/source/api/: jef.chinese_censorship.rst  jef.chinese_censorship.score_tiananmen.rst  jef.copyrights.report.rst  jef.copyrights.rst  jef.copyrights.score.rst  jef.copyrights.score_copyright.rst  jef.copyrights.score_copyright_harry_potter.rst  jef.copyrights.score_v1.rst  jef.harmful_substances.rst  jef.harmful_substances.score_agent_1_10_recipe.rst  jef.illicit_substances.rst  jef.illicit_substances.score_meth_recipe.rst  jef.rst  jef.score_algos.jef_score.rst  (+2 more)
jef/: __init__.py  scoring.py
jef/chinese_censorship/: score_tiananmen.py
jef/copyrights/: __init__.py  constants.py  score_copyright.py  score_copyright_harry_potter.py
jef/harmful_substances/: score_agent_1_10_recipe.py
jef/illicit_substances/: score_meth_recipe.py
jef/score_algos/: jef_score.py  score.py
tests/chinese_censorship/: score_tiannanmen_test.py
tests/copyrights/: copyrights_utils_test.py  cpy_score_test.py  cpy_score_v1_test.py  report_test.py  score_copyright_harry_potter_test.py  score_copyright_test.py  test_copyright.py
tests/harmful_substances/: score_agent_1_10_recipe_test.py
tests/illicit_substances/: score_meth_recipe_test.py
tests/jef_score/: jef_score_test.py  jef_score_v1_test.py
(+7 files in other folders)
