[project]
name = "jef"
version = "0.1.0"
description = "Jailbreak Evaluation Module"
dependencies= [
]

authors = [
    { name = "jiwu-moz" }
]

requires-python = ">=3.12"

[project.optional-dependencies]
    dev = ["pytest"]

[project.urls]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "jef"
]
