[project]
name = "jef"
version = "0.1.0"
description = "Jailbreak Evaluation Module"
requires-python = ">=3.12"
dependencies= []

authors = [
    { name = "jiwu-moz" }
]


[project.optional-dependencies]
dev = ["pytest", "requests"]

[project.urls]
Homepage = "https://0din.ai"
Repository = "https://github.com/0din-ai/0din-JEF"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]